--- a/doc/latex/doxygen.sty
+++ b/doc/latex/doxygen.sty
@@ -41,8 +41,8 @@
 \fancyhead[RO]{\fancyplain{}{\bfseries\thepage}}
 \fancyfoot[LE]{\fancyplain{}{}}
 \fancyfoot[CE]{\fancyplain{}{}}
-\fancyfoot[RE]{\fancyplain{}{\bfseries\scriptsize Généré le Jeudi Novembre 19 2015 17\-:11\-:32 pour « \-R\-U\-Z\-Z\-L\-E\-\_\-\-D\-E\-C\-R\-A\-N\-D\-\_\-\-G\-E\-R\-B\-A\-U\-L\-T » par Doxygen }}
-\fancyfoot[LO]{\fancyplain{}{\bfseries\scriptsize Généré le Jeudi Novembre 19 2015 17\-:11\-:32 pour « \-R\-U\-Z\-Z\-L\-E\-\_\-\-D\-E\-C\-R\-A\-N\-D\-\_\-\-G\-E\-R\-B\-A\-U\-L\-T » par Doxygen }}
+\fancyfoot[RE]{\fancyplain{}{\bfseries\scriptsize Généré le Lundi Novembre 23 2015 17\-:07\-:35 pour « \-R\-U\-Z\-Z\-L\-E\-\_\-\-D\-E\-C\-R\-A\-N\-D\-\_\-\-G\-E\-R\-B\-A\-U\-L\-T » par Doxygen }}
+\fancyfoot[LO]{\fancyplain{}{\bfseries\scriptsize Généré le Lundi Novembre 23 2015 17\-:07\-:35 pour « \-R\-U\-Z\-Z\-L\-E\-\_\-\-D\-E\-C\-R\-A\-N\-D\-\_\-\-G\-E\-R\-B\-A\-U\-L\-T » par Doxygen }}
 \fancyfoot[CO]{\fancyplain{}{}}
 \fancyfoot[RO]{\fancyplain{}{}}
 %---------- Internal commands used in this style file ----------------
