--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -56,7 +56,7 @@
 \vspace*{1cm}
 {\large Généré par Doxygen 1.8.3.1}\\
 \vspace*{0.5cm}
-{\small Jeudi Novembre 19 2015 17:11:32}\\
+{\small Lundi Novembre 23 2015 17:07:35}\\
 \end{center}
 \end{titlepage}
 \clearemptydoublepage
